--- a/DIFER/src/app/Components/discos/discos.component.html
+++ b/DIFER/src/app/Components/discos/discos.component.html
@@ -1,21 +1,35 @@
 <!--DISCOGRAFÍA-->
+
 <div class="nav-wrapper row">
   <div class="col s12 m7 l4">
     <div class="card">
       <div class="card-image">
-        <img src="../../../assets/resources/Album4-Special.png" id="logo" class="left">
-        <span class="card-content"><h5>Special</h5><br><h6>2022</h6></span>
-
-        <img src="../../../assets/resources/Album3-Cuz_I_Love_You.png" id="logo" class="right">
-        <span class="card-content"><h5>Cuz I Love You</h5><br><h6>2019</h6></span>
-
-        <img src="../../../assets/resources/Album2-Big_Grrrl_Small_World.png" id="logo" class="left">
-        <span class="card-content"><h5>Big Grrrl Small World</h5><br><h6>2015</h6></span>
-
-        <img src="../../../assets/resources/Album1-Lizzobangers.png" id="logo" class="right">
-        <span class="card-content"><h5>Lizzobangers</h5><br><h6>2013</h6></span>
+        <img src="../../../assets/resources/special.JPG" id="logo" class="right">
+        <span class="card-content"><h5 class="ed-text">Special</h5><br><h6 class="ed-text">2022</h6></span>
+      </div>
     </div>
-  </div>
+
+    <div class="card">
+      <div class="card-image">
+        <img src="../../../assets/resources/cuz i love you.JPG" id="logo" class="right">
+        <span class="card-content"><h5 class="ed-text">Cuz I Love You</h5><br><h6 class="ed-text">2019</h6></span>
+      </div>
+    </div>
+      
+    <div class="card">  
+      <div class="card-image">
+        <img src="../../../assets/resources/big grrrl small world.jpg" id="logo" class="right">
+        <span class="card-content"><h5 class="ed-text">Big Grrrl Small World</h5><br><h6 class="ed-text">2015</h6></span>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-image">
+        <img src="../../../assets/resources/albums.jpg" id="logo" class="right">
+        <span class="card-content"><h5 class="ed-text">Lizzobangers</h5><br><h6 class="ed-text">2013</h6></span>
+    </div>
+    </div>
+      
 
 
 <br>
