--- a/DIFER/src/app/Components/footer/footer.component.css
+++ b/DIFER/src/app/Components/footer/footer.component.css
@@ -1,7 +1,7 @@
 .icons{
-    height: 25px;
+    height: 20px;
     width: auto; 
-    margin: 10px 15px ;
+    margin: 5px 8px ;
 
 }
 
@@ -17,7 +17,7 @@
 }
 
 #logo{
-    height: 100px;
+    height: 50px;
     width: auto; 
     margin: 10px 15px;
 }
@@ -25,4 +25,8 @@
 .nav-wrapper{
     background-color:#F6EEF6 ;
     text-emphasis-color: #000000;
+}
+
+.ed-text{
+    color: #5E581B;
 }
