--- a/DIFER/src/app/Components/footer/footer.component.html
+++ b/DIFER/src/app/Components/footer/footer.component.html
@@ -3,23 +3,22 @@
     <nav>
         <div class="row nav-wrapper">
             <a href="#" class="brand logo col l1 left">
-                <img src="../../../assets/resources/atlantic_records.png" id="logo">
+                <img src="../../../assets/icons/ATLANTIC RECORDS LOGO 3.png" id="logo">
             </a>
-            <ul class="hide-on-med-and-down nav-wrapper col l10">
-                <li><a href="#" class="black-text valign-wrapper icons">Celebrating Artists, Music, Discovery & <br> 60+ Years of Recorded Music History<br> © 2022 ATLANTIC RECORDS</a></li>
-                <li><a href="#" class="black-text valign-wrapper icons push-l3">PRIVACY POLICY</a></li>
-                <li><a href="#" class="black-text valign-wrapper icons">TERMS OF USE</a></li>
-                <li><a href="#" class="black-text valign-wrapper icons">COOKIES POLICY</a></li>
-                <li><a href="#" class="valign-wrapper right">
-                    <img src="../../../assets/icons/insta.png" class="icons">
-                    <img src="../../../assets/icons/apple.png" class="icons">
-                    <img src="../../../assets/icons/spot.png" class="icons">
-                    <img src="../../../assets/icons/tweet.png" class="icons">
-                    <img src="../../../assets/icons/tik.png" class="icons">
-                    <img src="../../../assets/icons/face.png" class="icons">
-                    <img src="../../../assets/icons/yt.png" class="icons">
-                    <img src="../../../assets/icons/sc.png" class="icons">
-                </a></li>
+            <ul class="hide-on-med-and-down nav-wrapper col l12 left">
+                <li><a class="valign-wrapper icons push-l2 ed-text">Celebrating Artists, Music, Discovery & <br> 60+ Years of Recorded Music History<br> © 2022 ATLANTIC RECORDS</a></li>
+                <li><a href="#" class="valign-wrapper icons push-l3 ed-text">PRIVACY POLICY</a></li>
+                <li><a href="#" class="valign-wrapper icons ed-text">TERMS OF USE</a></li>
+                <li><a href="#" class="valign-wrapper icons ed-text">COOKIES POLICY</a></li>
+                <li><a href="#" class="valign-wrapper right"><img src="../../../assets/icons/insta.png" class="icons"></a></li>
+                <li><a href="#" class="valign-wrapper right"><img src="../../../assets/icons/apple.png" class="icons"></a></li>
+                <li><a href="#" class="valign-wrapper right"><img src="../../../assets/icons/spotify.png" class="icons"></a></li>
+                <li><a href="#" class="valign-wrapper right"><img src="../../../assets/icons/twitter.png" class="icons"></a></li>
+                <li><a href="#" class="valign-wrapper right"><img src="../../../assets/icons/tiktok.png" class="icons"></a></li>
+                <li><a href="#" class="valign-wrapper right"><img src="../../../assets/icons/facebook.png" class="icons"></a></li>
+                <li><a href="#" class="valign-wrapper right"><img src="../../../assets/icons/yt.png" class="icons"></a></li>
+                <li><a href="#" class="valign-wrapper right"><img src="../../../assets/icons/sc.png" class="icons"></a></li>
+                
             </ul>
         </div>
     </nav>
