--- a/DIFER/src/app/Components/discos/discos.component.html
+++ b/DIFER/src/app/Components/discos/discos.component.html
@@ -1,38 +1,18 @@
 <!--DISCOGRAFÍA-->
+<app-body></app-body>
 
-<div class="nav-wrapper row">
-  <div class="col s12 m7 l4">
-    <div class="card">
-      <div class="card-image">
-        <img src="../../../assets/resources/special.JPG" id="logo" class="right">
-        <span class="card-content"><h5 class="ed-text">Special</h5><br><h6 class="ed-text">2022</h6></span>
-      </div>
-    </div>
+<div class="nav-wrapper">
 
-    <div class="card">
-      <div class="card-image">
-        <img src="../../../assets/resources/cuz i love you.JPG" id="logo" class="right">
-        <span class="card-content"><h5 class="ed-text">Cuz I Love You</h5><br><h6 class="ed-text">2019</h6></span>
-      </div>
+  <div class =" col l12 s8 m10">
+    <img class ="col l4 left"  src="../../../assets/resources/special.JPG" id="logo"> 
+    <div>
+      <h5 class="col l4 left pull-l2 ed-text">Special</h5>
     </div>
-      
-    <div class="card">  
-      <div class="card-image">
-        <img src="../../../assets/resources/big grrrl small world.jpg" id="logo" class="right">
-        <span class="card-content"><h5 class="ed-text">Big Grrrl Small World</h5><br><h6 class="ed-text">2015</h6></span>
-      </div>
-    </div>
+  </div>
 
-    <div class="card">
-      <div class="card-image">
-        <img src="../../../assets/resources/albums.jpg" id="logo" class="right">
-        <span class="card-content"><h5 class="ed-text">Lizzobangers</h5><br><h6 class="ed-text">2013</h6></span>
-    </div>
-    </div>
-      
+  <img src="../../../assets/resources/cuz i love you.JPG" id="logo" class="right">
+  <img src="../../../assets/resources/big grrrl small world.jpg" id="logo" class="right">
+  <img src="../../../assets/resources/albums.jpg" id="logo" class="right">
 
 
-<br>
-<br>
-<br>
-  
+</div>
