--- a/DIFER/src/app/app.component.html
+++ b/DIFER/src/app/app.component.html
@@ -1,4 +1,3 @@
 <app-header></app-header>
-<app-body></app-body>
-<app-discos></app-discos>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
