--- a/DIFER/src/app/Components/body/body.component.html
+++ b/DIFER/src/app/Components/body/body.component.html
@@ -1,6 +1,6 @@
 <!--HEADER DISCOGRAFÍA-->
   <div class="nav-wrapper row">
-    <div class="col l3 s10 m7 left pull-l2">
+    <div class="row l8 s7 m5 left">
       <div class="card">
         <div class="card-image">
           <img src="../../../assets/resources/disc.jpg" id="logo">
