--- a/DIFER/src/app/Components/footer/footer.component.html
+++ b/DIFER/src/app/Components/footer/footer.component.html
@@ -2,7 +2,7 @@
 <div>
     <nav>
         <div class="row nav-wrapper">
-            <a href="#" class="brand logo col l1 left">
+            <a href="https://www.atlanticrecords.com/" class="brand logo col l1 left">
                 <img src="../../../assets/icons/ATLANTIC RECORDS LOGO 3.png" id="logo">
             </a>
             <ul class="hide-on-med-and-down nav-wrapper col l12 left">
@@ -10,14 +10,14 @@
                 <li><a href="#" class="valign-wrapper icons push-l3 ed-text">PRIVACY POLICY</a></li>
                 <li><a href="#" class="valign-wrapper icons ed-text">TERMS OF USE</a></li>
                 <li><a href="#" class="valign-wrapper icons ed-text">COOKIES POLICY</a></li>
-                <li><a href="#" class="valign-wrapper right"><img src="../../../assets/icons/insta.png" class="icons"></a></li>
-                <li><a href="#" class="valign-wrapper right"><img src="../../../assets/icons/apple.png" class="icons"></a></li>
-                <li><a href="#" class="valign-wrapper right"><img src="../../../assets/icons/spotify.png" class="icons"></a></li>
-                <li><a href="#" class="valign-wrapper right"><img src="../../../assets/icons/twitter.png" class="icons"></a></li>
-                <li><a href="#" class="valign-wrapper right"><img src="../../../assets/icons/tiktok.png" class="icons"></a></li>
-                <li><a href="#" class="valign-wrapper right"><img src="../../../assets/icons/facebook.png" class="icons"></a></li>
-                <li><a href="#" class="valign-wrapper right"><img src="../../../assets/icons/yt.png" class="icons"></a></li>
-                <li><a href="#" class="valign-wrapper right"><img src="../../../assets/icons/sc.png" class="icons"></a></li>
+                <li><a href="https://www.instagram.com/lizzobeeating/" class="valign-wrapper right"><img src="../../../assets/icons/insta.png" class="icons"></a></li>
+                <li><a href="https://www.facebook.com/LizzoMusic/" class="valign-wrapper right"><img src="../../../assets/icons/apple.png" class="icons"></a></li>
+                <li><a href="https://open.spotify.com/artist/56oDRnqbIiwx4mymNEv7dS" class="valign-wrapper right"><img src="../../../assets/icons/spotify.png" class="icons"></a></li>
+                <li><a href="https://twitter.com/lizzo?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" class="valign-wrapper right"><img src="../../../assets/icons/twitter.png" class="icons"></a></li>
+                <li><a href="https://www.tiktok.com/@lizzo?lang=es" class="valign-wrapper right"><img src="../../../assets/icons/tiktok.png" class="icons"></a></li>
+                <li><a href="https://www.facebook.com/LizzoMusic/" class="valign-wrapper right"><img src="../../../assets/icons/facebook.png" class="icons"></a></li>
+                <li><a href="https://www.youtube.com/channel/UCXVMHu5xDH1oOfUGvaLyjGg" class="valign-wrapper right"><img src="../../../assets/icons/yt.png" class="icons"></a></li>
+                <li><a href="https://soundcloud.com/lizzomusic" class="valign-wrapper right"><img src="../../../assets/icons/sc.png" class="icons"></a></li>
                 
             </ul>
         </div>
