--- a/DIFER/src/app/Components/album-special/album-special.component.html
+++ b/DIFER/src/app/Components/album-special/album-special.component.html
@@ -1,120 +1,91 @@
-<div class="nav-wrapper row">
-    <div class="col s7 m7 l4">
-          <img src="../../../assets/resources/special.JPG" id="stream" class="right">
-          <div class= "col l8 push-l2">
-            <h3 class="ed-textHeader">Special </h3> <h5 class="ed-textHeader2">2022</h5>
-            <h6 class="ed-textBtext">Special es el cuarto álbum de estudio de la cantante y rapera estadounidense Lizzo, lanzado por Nice Life y Atlantic Records el 15 de julio de 2022.</h6>
+<div class="nav-wrapper">
+        <div class ="col l2 s4 m8">
+            <img class ="col l12 push-l2"  src="../../../assets/resources/special.JPG" id="stream"> 
+            <h3 class="col l1 pull-l2 right ed-textHeader">Special</h3>
+            <h6 class=" right ed-textHeader2">2022</h6>
+            <h6 class="col l12 pull-l2 right ed-textBtext">Special es el cuarto álbum de estudio de<br> 
+                la cantante y rapera estadounidense Lizzo</h6>
         </div>
-    </div>
+</div>
 
-    <div> </div>
-    <div class ="row">
-        <a href="https://music.apple.com/mx/album/the-sign/1619161952?i=1619162348" class="brand logo col l1 center">
-            <img src="../../../assets/resources/listen-on-apple-music-white.png" id="logo">
-            </a>
-    </div>
+<div class="nav-wrapper2"> 
+    <div class ="col l2 s4 m8">
+        <h6 class="left ed-textBtext2">1. The Sign <br><br><br><br>2. About Damn Time <br><br><br><br>
+            3. Grrls <br><br><br><br> 4. 2 Be Loved (Am I Ready)<br><br><br><br>
+            5. I Love You Bitch <br><br><br><br> 6. Special <br><br><br><br>
+            7. Break Up Twice <br><br><br><br> 8. Everybody's Gay <br><br><br><br>
+            9. Naked  <br><br><br><br></h6>
 
-    <div class ="row">
-        <a href="https://open.spotify.com/track/7GSwmKxanoWEdpurOCldDe?si=b006204377f040b0" class="brand logo col l1 center">
-            <img src="../../../assets/resources/listen-on-spotify.png" id="logo">
+        <a href="https://music.apple.com/mx/album/the-sign/1619161952?i=1619162348">
+            <img class ="col l12 push-l2 right cl2" src="../../../assets/resources/listen-on-apple-music-white.png" id="logo">
             </a>
-    </div>
-   
-    <div class ="row">
-        <a href="https://music.apple.com/mx/album/the-sign/1619161952?i=1619162348" class="brand logo col l1 center">
-            <img src="../../../assets/resources/listen-on-apple-music-white.png" id="logo">
-            </a>
-    </div>
-    
-    <div class ="row">
-        <a href="https://open.spotify.com/track/7GSwmKxanoWEdpurOCldDe?si=b006204377f040b0" class="brand logo col l1 center">
-            <img src="../../../assets/resources/listen-on-spotify.png" id="logo">
-            </a>
-    </div>
-    <div class ="row">
-        <a href="https://music.apple.com/mx/album/the-sign/1619161952?i=1619162348" class="brand logo col l1 center">
-            <img src="../../../assets/resources/listen-on-apple-music-white.png" id="logo">
-            </a>
-    </div>
-    
-    <div class ="row">
-        <a href="https://open.spotify.com/track/7GSwmKxanoWEdpurOCldDe?si=b006204377f040b0" class="brand logo col l1 center">
-            <img src="../../../assets/resources/listen-on-spotify.png" id="logo">
-            </a>
-    </div>
-    <div class ="row">
-        <a href="https://music.apple.com/mx/album/the-sign/1619161952?i=1619162348" class="brand logo col l1 center">
-            <img src="../../../assets/resources/listen-on-apple-music-white.png" id="logo">
-            </a>
-    </div>
-    
-    <div class ="row">
-        <a href="https://open.spotify.com/track/7GSwmKxanoWEdpurOCldDe?si=b006204377f040b0" class="brand logo col l1 center">
-            <img src="../../../assets/resources/listen-on-spotify.png" id="logo">
-            </a>
-    </div>
-    <div class ="row">
-        <a href="https://music.apple.com/mx/album/the-sign/1619161952?i=1619162348" class="brand logo col l1 center">
-            <img src="../../../assets/resources/listen-on-apple-music-white.png" id="logo">
-            </a>
-    </div>
-    
-    <div class ="row">
-        <a href="https://open.spotify.com/track/7GSwmKxanoWEdpurOCldDe?si=b006204377f040b0" class="brand logo col l1 center">
-            <img src="../../../assets/resources/listen-on-spotify.png" id="logo">
-            </a>
-    </div>
-    <div class ="row">
-        <a href="https://music.apple.com/mx/album/the-sign/1619161952?i=1619162348" class="brand logo col l1 center">
-            <img src="../../../assets/resources/listen-on-apple-music-white.png" id="logo">
-            </a>
-    </div>
-    
-    <div class ="row">
-        <a href="https://open.spotify.com/track/7GSwmKxanoWEdpurOCldDe?si=b006204377f040b0" class="brand logo col l1 center">
-            <img src="../../../assets/resources/listen-on-spotify.png" id="logo">
-            </a>
-    </div>
-    <div class ="row">
-        <a href="https://music.apple.com/mx/album/the-sign/1619161952?i=1619162348" class="brand logo col l1 center">
-            <img src="../../../assets/resources/listen-on-apple-music-white.png" id="logo">
-            </a>
-    </div>
-    
-    <div class ="row">
-        <a href="https://open.spotify.com/track/7GSwmKxanoWEdpurOCldDe?si=b006204377f040b0" class="brand logo col l1 center">
-            <img src="../../../assets/resources/listen-on-spotify.png" id="logo">
-            </a>
-    </div>
-    <div class ="row">
-        <a href="https://music.apple.com/mx/album/the-sign/1619161952?i=1619162348" class="brand logo col l1 center">
-            <img src="../../../assets/resources/listen-on-apple-music-white.png" id="logo">
-            </a>
-    </div>
-    
-    <div class ="row">
-        <a href="https://open.spotify.com/track/7GSwmKxanoWEdpurOCldDe?si=b006204377f040b0" class="brand logo col l1 center">
-            <img src="../../../assets/resources/listen-on-spotify.png" id="logo">
-            </a>
-    </div>
-    <div class ="row">
-        <a href="https://music.apple.com/mx/album/the-sign/1619161952?i=1619162348" class="brand logo col l1 center">
-            <img src="../../../assets/resources/listen-on-apple-music-white.png" id="logo">
-            </a>
-    </div>
-    
-    <div class ="row">
-        <a href="https://open.spotify.com/track/7GSwmKxanoWEdpurOCldDe?si=b006204377f040b0" class="brand logo col l1 center">
-            <img src="../../../assets/resources/listen-on-spotify.png" id="logo">
-            </a>
-    </div>
 
+        <a href="https://open.spotify.com/track/7GSwmKxanoWEdpurOCldDe?si=b006204377f040b0">
+            <img class ="col l12 push-l2 right cl1" src="../../../assets/resources/listen-on-spotify.png" id="logo">
+            </a>
+
+            <a href="https://music.apple.com/mx/album/the-sign/1619161952?i=1619162348">
+                <img class ="col l12 push-l2 right cl4" src="../../../assets/resources/listen-on-apple-music-white.png" id="logo">
+                </a>
     
-        <div class= "col l8 push-l2">
-            <h6 class="ed-textBtext2">1. The Sign <br> <br><br>2. About Damn Time <br> <br><br>
-                3. Grrls <br> <br><br> 4. 2 Be Loved (Am I Ready) <br> <br><br>
-                5. I Love You Bitch  <br> <br><br> 6. Special <br> <br><br>
-                7. Break Up Twice  <br> <br><br> 8. Everybody's Gay <br> <br><br>
-                9. Naked  <br> <br><br><br></h6>
-        </div>
+            <a href="https://open.spotify.com/track/7GSwmKxanoWEdpurOCldDe?si=b006204377f040b0">
+                <img class ="col l12 push-l2 right cl3" src="../../../assets/resources/listen-on-spotify.png" id="logo">
+                </a>
+
+                <a href="https://music.apple.com/mx/album/the-sign/1619161952?i=1619162348">
+                    <img class ="col l12 push-l2 right cl6" src="../../../assets/resources/listen-on-apple-music-white.png" id="logo">
+                    </a>
+        
+                <a href="https://open.spotify.com/track/7GSwmKxanoWEdpurOCldDe?si=b006204377f040b0">
+                    <img class ="col l12 push-l2 right cl5" src="../../../assets/resources/listen-on-spotify.png" id="logo">
+                    </a>
+
+                    <a href="https://music.apple.com/mx/album/the-sign/1619161952?i=1619162348">
+                        <img class ="col l12 push-l2 right cl8" src="../../../assets/resources/listen-on-apple-music-white.png" id="logo">
+                        </a>
+            
+                    <a href="https://open.spotify.com/track/7GSwmKxanoWEdpurOCldDe?si=b006204377f040b0">
+                        <img class ="col l12 push-l2 right cl7" src="../../../assets/resources/listen-on-spotify.png" id="logo">
+                        </a>
+
+                        <a href="https://music.apple.com/mx/album/the-sign/1619161952?i=1619162348">
+                            <img class ="col l12 push-l2 right cl10" src="../../../assets/resources/listen-on-apple-music-white.png" id="logo">
+                            </a>
+                
+                        <a href="https://open.spotify.com/track/7GSwmKxanoWEdpurOCldDe?si=b006204377f040b0">
+                            <img class ="col l12 push-l2 right cl9" src="../../../assets/resources/listen-on-spotify.png" id="logo">
+                            </a>
+
+                            <a href="https://music.apple.com/mx/album/the-sign/1619161952?i=1619162348">
+                                <img class ="col l12 push-l2 right cl12" src="../../../assets/resources/listen-on-apple-music-white.png" id="logo">
+                                </a>
+                    
+                            <a href="https://open.spotify.com/track/7GSwmKxanoWEdpurOCldDe?si=b006204377f040b0">
+                                <img class ="col l12 push-l2 right cl11" src="../../../assets/resources/listen-on-spotify.png" id="logo">
+                                </a>
+
+                                <a href="https://music.apple.com/mx/album/the-sign/1619161952?i=1619162348">
+                                    <img class ="col l12 push-l2 right cl14" src="../../../assets/resources/listen-on-apple-music-white.png" id="logo">
+                                    </a>
+                        
+                                <a href="https://open.spotify.com/track/7GSwmKxanoWEdpurOCldDe?si=b006204377f040b0">
+                                    <img class ="col l12 push-l2 right cl13" src="../../../assets/resources/listen-on-spotify.png" id="logo">
+                                    </a>
+
+                                    <a href="https://music.apple.com/mx/album/the-sign/1619161952?i=1619162348">
+                                        <img class ="col l12 push-l2 right cl16" src="../../../assets/resources/listen-on-apple-music-white.png" id="logo">
+                                        </a>
+                            
+                                    <a href="https://open.spotify.com/track/7GSwmKxanoWEdpurOCldDe?si=b006204377f040b0">
+                                        <img class ="col l12 push-l2 right cl15" src="../../../assets/resources/listen-on-spotify.png" id="logo">
+                                        </a>
+
+                                        <a href="https://music.apple.com/mx/album/the-sign/1619161952?i=1619162348">
+                                            <img class ="col l12 push-l2 right cl18" src="../../../assets/resources/listen-on-apple-music-white.png" id="logo">
+                                            </a>
+                                
+                                        <a href="https://open.spotify.com/track/7GSwmKxanoWEdpurOCldDe?si=b006204377f040b0">
+                                            <img class ="col l12 push-l2 right cl17" src="../../../assets/resources/listen-on-spotify.png" id="logo">
+                                            </a>
     </div>
+</div>
