--- a/DIFER/src/app/Components/discos/discos.component.html
+++ b/DIFER/src/app/Components/discos/discos.component.html
@@ -1,18 +1,52 @@
 <!--DISCOGRAFÍA-->
-<app-body></app-body>
 
 <div class="nav-wrapper">
-
-  <div class =" col l12 s8 m10">
-    <img class ="col l4 left"  src="../../../assets/resources/special.JPG" id="logo"> 
-    <div>
-      <h5 class="col l4 left pull-l2 ed-text">Special</h5>
+  <app-body></app-body>
+  <div class="cl2">
+    <div class ="col l12 s8 m10">
+      <a href="/albumSpecial"><img class ="col l12"  src="../../../assets/resources/special.JPG" id="logo"></a>
+      <img class ="col l12  push-l5"  src="../../../assets/resources/cuz i love you.JPG" id="logo"> 
+      
+      <div class="row">
+        <div class="col l1 push-l2 ed-text">
+          <h6>Special</h6>
+          <h6>2022</h6>
+        </div>
+          <div class="col l2 pull-l2 right ed-text">
+            <h6>Cuz I Love You</h6>
+            <h6>2019</h6>
+          </div>
+        </div>
+      </div>
+  
     </div>
+
+
+    <div class="nav-wrapper2"> 
+      <div class="cl1">
+        <div class ="col l12 s8 m10">
+          <img class ="col l1"  src="../../../assets/resources/big grrrl small world.jpg" id="logo"> 
+          <img class ="col l8  push-l5"  src="../../../assets/resources/albums.jpg" id="logo">
+          
+          <div class="row">
+            <div class="col l2 push-l1 ed-text">
+              <h6>Big Grrrl Small World</h6>
+              <h6>2015</h6>
+            </div>
+              <div class="col l2 pull-l3 right ed-text">
+                <h6>Lizzobangers</h6>
+              <h6>2013</h6>
+            </div>
+        </div>
+       
+        </div>
+         
+      </div> 
+
+
   </div>
-
-  <img src="../../../assets/resources/cuz i love you.JPG" id="logo" class="right">
-  <img src="../../../assets/resources/big grrrl small world.jpg" id="logo" class="right">
-  <img src="../../../assets/resources/albums.jpg" id="logo" class="right">
+  
 
 
-</div>
+
+
