--- a/DIFER/src/app/Components/header/header.component.html
+++ b/DIFER/src/app/Components/header/header.component.html
@@ -7,7 +7,7 @@
             </a>
             <ul class="hide-on-med-and-down nav-wrapper col l8 s12 left">
                 <li><a href="#" class="black-text valign-wrapper icons ">SOBRE LIZZO</a></li>
-                <li><a href="#" class="pink-text valign-wrapper  icons">MÚSICA</a></li>
+                <li><a href="/musica" class="pink-text valign-wrapper  icons">MÚSICA</a></li>
                 <li><a href="#" class="black-text valign-wrapper  icons">PREMIOS</a></li>
                 <li><a href="#" class="black-text valign-wrapper  icons">TIENDA</a></li>
                 <li><a href="#" class="black-text valign-wrapper  icons">APARICIONES</a></li>
