--- a/DIFER/src/app/Components/body/body.component.css
+++ b/DIFER/src/app/Components/body/body.component.css
@@ -27,3 +27,9 @@
     background-color:#000000;
     text-emphasis-color: #000000;
 }
+
+.ed-text{
+    color: #fff;
+    font-size: large;
+    font-weight:bolder;
+}
