--- a/DIFER/src/app/Components/body/body.component.html
+++ b/DIFER/src/app/Components/body/body.component.html
@@ -4,7 +4,7 @@
       <div class="card">
         <div class="card-image">
           <img src="../../../assets/resources/disc.jpg" id="logo">
-          <span class="card-title"><h1>Discografía</h1></span>
+          <span class="card-title ed-text"><h1>Discografía</h1></span>
         </div>
         </div>
       </div>
